; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/whci/extr_pzl.c_pzl_qset_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/whci/extr_pzl.c_pzl_qset_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.whc = type { i32 }
%struct.whc_qset = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.whc*, %struct.whc_qset*)* @pzl_qset_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pzl_qset_remove(%struct.whc* %0, %struct.whc_qset* %1) #0 {
  %3 = alloca %struct.whc*, align 8
  %4 = alloca %struct.whc_qset*, align 8
  store %struct.whc* %0, %struct.whc** %3, align 8
  store %struct.whc_qset* %1, %struct.whc_qset** %4, align 8
  %5 = load %struct.whc_qset*, %struct.whc_qset** %4, align 8
  %6 = getelementptr inbounds %struct.whc_qset, %struct.whc_qset* %5, i32 0, i32 2
  %7 = load %struct.whc*, %struct.whc** %3, align 8
  %8 = getelementptr inbounds %struct.whc, %struct.whc* %7, i32 0, i32 0
  %9 = call i32 @list_move(i32* %6, i32* %8)
  %10 = load %struct.whc_qset*, %struct.whc_qset** %4, align 8
  %11 = getelementptr inbounds %struct.whc_qset, %struct.whc_qset* %10, i32 0, i32 0
  store i32 0, i32* %11, align 4
  %12 = load %struct.whc_qset*, %struct.whc_qset** %4, align 8
  %13 = getelementptr inbounds %struct.whc_qset, %struct.whc_qset* %12, i32 0, i32 1
  store i32 0, i32* %13, align 4
  ret void
}

declare dso_local i32 @list_move(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
